Fix several ui quirks

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -639,6 +639,7 @@ korrekturmeldungSendenForAll=send correction message to all steps
 korrekturmeldungSendenSingle=send correction message to current step
 kw=WW
 langLaufendeAufgaben=Long-running tasks
+languageUserInterface=Language for user interface
 lastPage=Insert as last page
 laufzettelDrucken=Print docket
 ldapKonfigurationSchreiben=Write LDAP configuration
@@ -856,6 +857,7 @@ project=Project
 projectAssociation=Project association
 projectConfiguration=Project configuration
 projectIsArchived=project inactive
+projectList=Projekt list
 projectProgress=Project progress
 projects=project
 projectSaving=Saving project...
@@ -1138,6 +1140,7 @@ wirklichAbschliessen=Are you sure you want to finish?
 wirklichAusfuehren=Are you sure you want to execute?
 withoutBatch=without batch
 workflow=Workflow
+workflows=Workflows
 working=Working
 wrongLogin=Authentication failure
 year=year
