--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -636,6 +636,7 @@ korrekturmeldungSendenForAll=Korrekturmeldung f\u00FCr alle Schritte senden
 korrekturmeldungSendenSingle=Korrekturmeldung f\u00FCr aktuellen Schritt senden
 kw=KW
 langLaufendeAufgaben=Lang laufende Aufgaben
+languageUserInterface=Sprache f\u00FCr Nutzeroberfl\u00E4che
 lastPage=Als letzte Seite einf\u00FCgen
 laufzettelDrucken=Laufzettel drucken
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
@@ -852,6 +853,7 @@ project=Projekt
 projectAssociation=Projektzugeh\u00F6rigkeit
 projectConfiguration=Projektkonfiguration
 projectIsArchived=Projekt ist inaktiv
+projectList=Projektliste
 projectProgress=Projektentwicklung
 projects=Projekt
 projectSaving=Projekt wird gespeichert...
@@ -1131,6 +1133,7 @@ wirklichAbschliessen=M\u00F6chten Sie wirklich beenden?
 wirklichAusfuehren=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 withoutBatch=Ohne Batch
 workflow=Workflow
+workflows=Workflows
 working=L\u00E4uft
 wrongLogin=Fehler bei Authentifizierung
 year=Jahr
