Drop-Down buttons for creating new elements in both pages : projects.xhtml and processes.xhtml

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -409,7 +409,7 @@ dmsImportImagesPfad=DMS import images path
 dmsImportPfadXmlDatei=DMS import path for XML file
 dmsImportRootPfad=DMS import root path
 dmsImportSuccessPfad=DMS import success path
-docket=docket
+docket=Docket
 docketFile=File Name of docket
 docketMissing=the configuration file for docket createion is missing
 docketTitle=Name of docket
@@ -1158,3 +1158,9 @@ zurueckZuArbeitsschritt=Back to task
 zurueckZurStartseite=Back to start page
 zusaetzlicheDetails=Additional details
 zusammenfassung=Summary
+Create=Create
+neuenRegelsatz=New rule set
+neueProzessvorlage=New process template
+neuenLaufzettel=New docket
+neuenProzess=New process
+neuenBatch=New batch
