Code adjustment based on Arved's Review

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1152,9 +1152,9 @@ zurueckZuArbeitsschritt=Zur\u00FCck zu Aufgabe
 zurueckZurStartseite=Zur\u00FCck zur Startseite
 zusaetzlicheDetails=Zus\u00E4tzliche Details
 zusammenfassung=Zusammenfassung
-Create=Anlegen
-neuenRegelsatz=Neuen Regelsatz
-neuenProzess=Neuen Vorgang
-neuenLaufzettel=Neuen Laufzettel
+neu=Neu
+neuerRegelsatz=Neuer Regelsatz
+neuerProzess=Neuer Vorgang
+neuerLaufzettel=Neuer Laufzettel
 neueProzessvorlage=Neue Produktionsvorlage
-neuenBatch=Neuen Batch
+neuerBatch=Neuer Batch
