--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1159,9 +1159,9 @@ zurueckZuArbeitsschritt=Back to task
 zurueckZurStartseite=Back to start page
 zusaetzlicheDetails=Additional details
 zusammenfassung=Summary
-Create=Create
-neuenRegelsatz=New rule set
+neu=New
+neuerRegelsatz=New rule set
 neueProzessvorlage=New process template
-neuenLaufzettel=New docket
-neuenProzess=New process
-neuenBatch=New batch
+neuerLaufzettel=New docket
+neuerProzess=New process
+neuerBatch=New batch
