Name of messages properties modified to Englisch

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1153,8 +1153,8 @@ zurueckZurStartseite=Zur\u00FCck zur Startseite
 zusaetzlicheDetails=Zus\u00E4tzliche Details
 zusammenfassung=Zusammenfassung
 neu=Neu
-neuerRegelsatz=Neuer Regelsatz
-neuerProzess=Neuer Vorgang
-neuerLaufzettel=Neuer Laufzettel
-neueProzessvorlage=Neue Produktionsvorlage
-neuerBatch=Neuer Batch
+newRuleSet=Neuer Regelsatz
+newProcessTemplate=Neue Produktionsvorlage
+newDocket=Neuer Laufzettel
+newProcess=Neuer Vorgang
+newBatch=Neuer Batch
