--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1160,8 +1160,8 @@ zurueckZurStartseite=Back to start page
 zusaetzlicheDetails=Additional details
 zusammenfassung=Summary
 neu=New
-neuerRegelsatz=New rule set
-neueProzessvorlage=New process template
-neuerLaufzettel=New docket
-neuerProzess=New process
-neuerBatch=New batch
+newRuleSet=New rule set
+newProcessTemplate=New process template
+newDocket=New docket
+newProcess=New process
+newBatch=New batch
