Relocate 'change password' form

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -953,6 +953,7 @@ selectedDatesNotValide=Zeitraum nicht m\u00F6glich. Das Startdatum liegt nicht v
 serversideDownload=Serverseitiges importieren
 serversideUpload=Serverseitiges exportieren
 setRepresentative=Repr\u00E4sentant setzen\:
+settings=Einstellungen
 shortsession=Session
 showArchivedProjects=Deaktivierte Projekte zeigen
 showAutomaticTasks=Automatische Aufgaben anzeigen
