--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -857,7 +857,7 @@ project=Project
 projectAssociation=Project association
 projectConfiguration=Project configuration
 projectIsArchived=project inactive
-projectList=Projekt list
+projectList=Project list
 projectProgress=Project progress
 projects=project
 projectSaving=Saving project...
@@ -960,6 +960,7 @@ selectedDatesNotValide=The selected dates are not valid. Start date is not befor
 serversideDownload=Server side import
 serversideUpload=Server side export
 setRepresentative=Set representative\:
+settings=Settings
 shortsession=Session
 showArchivedProjects=show deactivated projects
 showAutomaticTasks=show automatic tasks
