Modification of "neu" key to "newElement"

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1159,7 +1159,7 @@ zurueckZuArbeitsschritt=Back to task
 zurueckZurStartseite=Back to start page
 zusaetzlicheDetails=Additional details
 zusammenfassung=Summary
-neu=New
+newElement=New
 newRuleSet=New rule set
 newProcessTemplate=New process template
 newDocket=New docket
