--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1152,7 +1152,7 @@ zurueckZuArbeitsschritt=Zur\u00FCck zu Aufgabe
 zurueckZurStartseite=Zur\u00FCck zur Startseite
 zusaetzlicheDetails=Zus\u00E4tzliche Details
 zusammenfassung=Zusammenfassung
-neu=Neu
+newElement=Neu
 newRuleSet=Neuer Regelsatz
 newProcessTemplate=Neue Produktionsvorlage
 newDocket=Neuer Laufzettel
