Drop-down button for the users.xhtml page.

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1158,3 +1158,6 @@ newProcessTemplate=Neue Produktionsvorlage
 newDocket=Neuer Laufzettel
 newProcess=Neuer Vorgang
 newBatch=Neuer Batch
+newUser=Neuer Benutzer
+newUserGroup=Neue Benutzergruppe
+newLdapGroup=Neue LDAP-Gruppe
