--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1165,3 +1165,6 @@ newProcessTemplate=New process template
 newDocket=New docket
 newProcess=New process
 newBatch=New batch
+newUser=New user
+newUserGroup=New user group
+newLdapGroup=New LDAP group
