Add row expansion with additional information to project list

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -570,6 +570,7 @@ gruppeOderBenutzer=Gruppe oder Benutzer
 guessImages=gesch\u00E4tzte Seitenanzahl
 haarfarbe=Haarfarbe
 haupttitel=Haupttitel
+help=Hilfe
 herkunft=Herkunft
 heute=Heute
 hideCorrectionTasks=Entferne Korrekturschritte
@@ -719,6 +720,7 @@ mimetype=Mime Typ
 missingData=Unvollst\u00E4ndige Daten
 missingPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
 mitDetails=Mit Details (Fortschritt)
+modules=Module
 moeglicheAktionen=M\u00F6gliche Aktionen
 monographie=Monographie
 month=Monat
