--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -572,6 +572,7 @@ gruppeOderBenutzer=User group or user
 guessImages=guess Pages
 haarfarbe=Hair colour
 haupttitel=Main title
+help=Help
 herkunft=Origin
 heute=Today
 hideCorrectionTasks=remove correction steps
@@ -722,6 +723,7 @@ mimetype=Mime type
 missingData=incomplete data
 missingPlugin=Please select a Plugin.
 mitDetails=with details (progress)
+modules=Modules
 moeglicheAktionen=Possible actions
 monographie=Monograph
 month=month
