created pages for editing processes and tasks

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -687,6 +687,7 @@ processList=Vorgangsliste
 processProperties=Vorgangseigenschaft
 processTitleAllreadyInUse=Prozesstitel wird bereits verwendet.
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
+processSaving=Prozess wird gespeichert...
 productionStatistics=Produktionsstatistik
 productionThroughput=Produktionsdurchsatz
 progress=Fortschritt
@@ -833,6 +834,7 @@ tasklist=Aufgabenliste
 taskManagerIsRunning=Aufgaben nicht automatisch starten
 taskManagerIsStopped=Aufgaben automatisch starten
 taskmanager=Taskmanager
+taskSaving=Schritt wird gespeichert...
 technischeDaten=Technische Daten
 technischerHintergrund=Technischer Hintergrund
 # technischerHintergrundTextDemo is used in kitodo_config.properties
