Adjust markup and css rules to updated screendesign

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -844,6 +844,7 @@ ppnAnalog=PPN analog
 ppnDigital=PPN digital
 previous=R\u00FCckw\u00E4rts
 prioritaet=Priorit\u00E4t
+processList=Vorgangsliste
 processProperties=Vorgangseigenschaft
 processTitleAllreadyInUse=Prozesstitel wird bereits verwendet.
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
@@ -1024,6 +1025,7 @@ suffix=Suffix
 tabellengroesse=Tabellengr\u00F6\u00DFe
 table=Tabelle
 tableSize=Tabellengr\u00F6\u00DFe
+tasklist=Aufgabenliste
 taskManagerIsRunning=Aufgaben nicht automatisch starten
 taskManagerIsStopped=Aufgaben automatisch starten
 taskmanager=Taskmanager
