--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -848,6 +848,7 @@ ppnAnalog=PPN analogue
 ppnDigital=PPN digital
 previous=backward
 prioritaet=Priority
+processList=Process list
 processProperties=process property
 processTitleAllreadyInUse=Process title already in use.
 processesInThisBatch=processes of this batch
@@ -1031,6 +1032,7 @@ suffix=Suffix
 tabellengroesse=Table size
 table=Table
 tableSize=Table size
+tasklist=Task list
 taskManagerIsRunning=do not start tasks automatically
 taskManagerIsStopped=start tasks automatically
 taskmanager=Task manager
