Add tabView to activeUsers template

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1080,6 +1080,7 @@ uploadImport=Dateiupload-Import
 uploadSuccessful=Die Datei {0} wurde erfolgreich hochgeladen. Bitte 'Speichern' klicken.
 urls=URLs
 useForPreviewImage=Nur ausgew\u00E4hltes Vorschaubild verlinken
+userList=Benutzerliste
 users=Benutzer
 userAssignedError=Das Projekt kann nicht gel\u00F6scht werden, da diesem noch Benutzer zugewiesen sind.
 userData=Benutzerdaten \u0026 Einstellungen
