--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1094,6 +1094,7 @@ userGroupAssignedError=The user group could not be deleted because there are sti
 userGroupNotEmpty=User group is not empty
 userGroupNotSelected=No user group selected
 userGroupSaving=Saving user group
+userList=User list
 userNotFound=User not found
 users=Users
 userSaving=Saving user...
