Replacing the original values by the modified values of fields

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1167,3 +1167,5 @@ newBatch=Neuer Batch
 newUser=Neuer Benutzer
 newUserGroup=Neue Benutzergruppe
 newLdapGroup=Neue LDAP-Gruppe
+locked=Gesperrt
+unlocked=Entsperrt
