--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1174,3 +1174,5 @@ newBatch=New batch
 newUser=New user
 newUserGroup=New user group
 newLdapGroup=New LDAP group
+locked=Locked
+unlocked=Unlocked
