--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -340,6 +340,8 @@ confirmRename=Are you sure you want to rename this item?
 contentLoeschen=Delete content
 copy=copy
 correctionK=C
+correctionReportProblem=Problem for task correction couldn't be reported!
+correctionSolveProblem=Problem for task correction couldn't be solved!
 couldNotCreateImageFolder=Image folder could not be created
 count=Count
 crashed=Error
