--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -337,8 +337,8 @@ confirmRename=Sind Sie sicher, dass Sie diesen Vorgang umbenennen m\u00F6chten?
 contentLoeschen=Content l\u00F6schen
 copy=Kopie
 correctionK=K
-correctionReportProblem=Problem for task correction couldn't be reported!
-correctionSolveProblem=Problem for task correction couldn't be solved!
+correctionReportProblem=Korrekturmeldung an vorherige Aufgabe konnte nicht gemeldet werden!
+correctionSolveProblem=Korrekturl\u00F6sung konnte nicht an folgende Aufgabe gemeldet werden!
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
 count=Anzahl
 crashed=Fehler
