Fix styling of action symbols in project list

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -427,6 +427,7 @@ download=Images herunterladen
 downloadInMeinHomeverzeichnis=Download in mein Homeverzeichnis
 duplicate=Duplizieren
 duplicateName=Dieser Name wird in dieser Kollektion bereits verwendet
+duplicateProject=Projekt duplizieren
 duration=Laufzeit
 durationInMonth=Laufzeit in Monaten
 editDocket=Laufzettel bearbeiten
