--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -430,6 +430,7 @@ download=Download images
 downloadInMeinHomeverzeichnis=Download to my home directory
 duplicate=duplicate
 duplicateName=This name has already been used in this collection.
+duplicateProject=Duplicate project
 duration=Duration
 durationInMonth=Duration in month
 editDocket=edit docket
