--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1081,8 +1081,10 @@ typeSetNewspaper=Zeitung
 typeSetSerial=fortlaufendes Sammelwerk
 uebernehmen=\u00DCbernehmen
 uebersicht=\u00DCbersicht
+unableToDuplicateProject=Projekt konnte nicht dupliziert werden!
 unableToRegisterObject=Objekt konnte nicht registriert werden
 unableToRetrieveTask=Aufgabe konnte nicht geladen werden!
+unableToRetrieveTemplates=Templates konnten nicht geladen werden!
 unbekannt=Unbekannt
 unbekannterFehler=Unbekannter Fehler
 unknownErrorMsgWithLinkToStartPage=Ein unerwarteter Fehler ist aufgetreten. Eventuell m\u00FCssen Sie von vorne anfangen. Um fortzufahren klicken Sie bitte <a href\='../pages/Main.jsf'>hier</a>.<p>Sie k\u00F6nnen die  Fehlermeldung ignorieren oder eine <a href\='replaceThisForErrorEmail'><b><b><b> email an die Entwickler </b></b></b></a>  schicken.</p>
