Refactoring ldapgroupEdit page and correcting some spelling englisch mistakes.

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -101,6 +101,7 @@ addToSelectedBatch=Selektierte Vorg\u00E4nge zu ausgew\u00E4hltem Batch hinzuf\u
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrativ
+active=Aktiv
 aktiveBenutzer=Aktive Benutzer
 aktualisierungstyp=Art der Aktualisierung
 aktuelleProzesse=Vorg\u00E4nge
