Include filegroups when duplicating project

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1088,10 +1088,10 @@ typeSetNewspaper=newspaper
 typeSetSerial=serial publications
 uebernehmen=Apply
 uebersicht=Overview
-unableToDuplicateProject=Unable to duplicate project!
+unableToDuplicateProject=Error: Unable to duplicate project!
 unableToRegisterObject=Couldn't register object
 unableToRetrieveTask=Unable to retrieve the requested task!
-unableToRetrieveTemplates=Unable to retrieve templates!
+unableToRetrieveTemplates=Error: Unable to retrieve templates!
 unbekannt=Unknown
 unbekannterFehler=error
 unknownErrorMsgWithLinkToStartPage=An unexpected Error occurred. You may have to restart. To continue please klick <a href\='../pages/Main.jsf'>here</a>.<p>You may ignore the Stack Trace or send an <a href\='replaceThisForErrorEmail'><b><b><b>email to the developers</b></b></b></a>.</p>
