refactored authorization to authority

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -11,7 +11,8 @@
 AND=Contains
 ERROR=ERROR
 AuswaehlenAusVorhandenenProzessen=Choose from previous processes
-authorizations=Authorizations
+Automatische\ Generierung\ der\ SICI=Automatic generation of SICI
+authorities=Authorizations
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Final checking at volume level and release of all metadata
 Bestandsaufnahme\ der\ gedruckten\ Version=Inventory of printed version
 Corrections/Errors=Corrections / Errors
