added user group project authority relations

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -189,9 +189,10 @@ benutzergruppen=User groups
 benutzergruppenHinzufuegen=Add user groups
 benutzerkonfiguration=User configuration
 benutzerprofilLaden=Load user profile
-berechtigung=Authorisation
-berechtigungLoeschen=Delete authorisation
-berechtigungen=Authorisations
+berechtigung=Authority
+berechtigungHinzufuegen=Add authority
+berechtigungLoeschen=Delete authority
+berechtigungen=Authorities
 bildVerlinken=Link image
 bitteAuswaehlen=Please select
 blattzaehlung=Sheet counting
