Adjsut method getUser from BasisForm to use getAuthenticatedUser

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -785,6 +785,7 @@ noBatchSelected=Es ist kein Batch ausgew\u00E4hlt.
 noFileSelected=Keine Datei ausgew\u00E4hlt.
 noImage=Keine Images vorhanden in
 noImageRendered=Image wurde nicht erstellt
+noLoggedUser=There is no logged user
 noProcessSelected=Es wurde kein Vorgang ausgew\u00E4hlt.
 noProjectDetermined=Kein Projekt angegeben
 noProperties=keine weitere Eigenschaften
