--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -789,6 +789,7 @@ noBatchSelected=There is no batch selected.
 noFileSelected=No file selected.
 noImage=No images present in
 noImageRendered=Image was not rendered
+noLoggedUser=There is no logged user
 noProcessSelected=No process selected.
 noProjectDetermined=No project determined
 noProperties=No further properties
