added indexing of clients, added pages for editing ans saving clients

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -263,6 +263,11 @@ citation.pages=Seiten
 citation.versionDate=Stand\:
 clear=Eingabe l\u00F6schen
 clearData=Daten l\u00F6schen
+client=Mandant
+clients=Mandanten
+clientEdit=Mandanten bearbeiten
+clientNew=Neuen Mandanten anlegen
+clientSaving=Mandant wird gespeichert...
 close=Schlie\u00DFen
 colorScheme=Farbschema
 configurationChanged=Einstellungen ge\u00E4ndert
