--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -264,6 +264,11 @@ citation.quotes.open=\u201C
 citation.versionDate=Version of\:
 clear=delete entry
 clearData=Clear data
+client=Client
+clients=Clients
+clientEdit=Edit client
+clientNew=Create new client
+clientSaving=Saving client...
 close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
