fixed client selection for project

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -269,6 +269,7 @@ clients=Clients
 clientEdit=Edit client
 clientNew=Create new client
 clientSaving=Saving client...
+clientNon=No client
 close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
