fixed client saving

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -268,7 +268,7 @@ clients=Mandanten
 clientEdit=Mandanten bearbeiten
 clientNew=Neuen Mandanten anlegen
 clientSaving=Mandant wird gespeichert...
-clientNon=Kein Manadant
+clientNon=Kein Mandant
 close=Schlie\u00DFen
 colorScheme=Farbschema
 configurationChanged=Einstellungen ge\u00E4ndert
