Retrieve user tasks in header from database instead of index

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -9,6 +9,7 @@
 # GPL3-License.txt file that was distributed with this source code.
 #
 AND=Enth\u00E4lt
+ERROR=FEHLER
 AuswaehlenAusVorhandenenProzessen=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 authorizations=Berechtigungen
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Bandweise Endkontrolle und Freigabe aller Metadaten)
