--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -9,6 +9,7 @@
 # GPL3-License.txt file that was distributed with this source code.
 #
 AND=Contains
+ERROR=ERROR
 AuswaehlenAusVorhandenenProzessen=Choose from previous processes
 authorizations=Authorizations
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Final checking at volume level and release of all metadata
