created picklist for adding client relations

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -12,7 +12,13 @@ AND=Contains
 ERROR=ERROR
 AuswaehlenAusVorhandenenProzessen=Choose from previous processes
 Automatische\ Generierung\ der\ SICI=Automatic generation of SICI
-authorities=Authorizations
+authorities=Authorities
+authority=Authority
+authorityAdd=Add authority
+authorityDelete=Delete authority
+authoritiesProject=Project authorities
+authoritiesClient=Client authorities
+authoritiesGlobal=global authorities
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Final checking at volume level and release of all metadata
 Bestandsaufnahme\ der\ gedruckten\ Version=Inventory of printed version
 Corrections/Errors=Corrections / Errors
@@ -189,10 +195,7 @@ benutzergruppen=User groups
 benutzergruppenHinzufuegen=Add user groups
 benutzerkonfiguration=User configuration
 benutzerprofilLaden=Load user profile
-berechtigung=Authority
-berechtigungHinzufuegen=Add authority
-berechtigungLoeschen=Delete authority
-berechtigungen=Authorities
+benutzerverwaltung=User management
 bildVerlinken=Link image
 bitteAuswaehlen=Please select
 blattzaehlung=Sheet counting
