--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -12,6 +12,12 @@ AND=Enth\u00E4lt
 ERROR=FEHLER
 AuswaehlenAusVorhandenenProzessen=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 authorities=Berechtigungen
+authority=Berechtigung
+authorityAdd=Add authority
+authorityDelete=Berechtigung l\u00F6schen
+authoritiesProject=Projektberechtigungen
+authoritiesClient=Mandantberechtigungen
+authoritiesGlobal=Globale Berechtigungen
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Bandweise Endkontrolle und Freigabe aller Metadaten)
 Bestandsaufnahme\ der\ gedruckten\ Version=Bestandsaufnahme der gedruckten Version
 createMapping=ElasticSearch Mapping erzeugen
@@ -188,9 +194,6 @@ benutzergruppenHinzufuegen=Benutzergruppen hinzuf\u00FCgen
 benutzerkonfiguration=Benutzerkonfiguration
 benutzerprofilLaden=Benutzerprofil laden
 benutzerverwaltung=Benutzerverwaltung
-berechtigung=Berechtigung
-berechtigungLoeschen=Berechtigung l\u00F6schen
-berechtigungen=Berechtigungen
 bildVerlinken=Bild verlinken
 bitteAuswaehlen=Bitte ausw\u00E4hlen
 blattzaehlung=Blattz\u00E4hlung
