Adding "editCurrentTaks.xhtml" in the new Frontend frame

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -540,6 +540,7 @@ meldungUeberProblemloesungAnNachchfolgendeStationSenden=Meldung \u00FCber Proble
 meldungUeberProblemloesungSenden=Meldung \u00FCber Probleml\u00F6sung senden
 meldungUeberProblemloesungSendenForAll=Meldung \u00FCber Probleml\u00F6sung f\u00FCr alle Schritte senden
 meldungUeberProblemloesungSendenSingle=Meldung \u00FCber Probleml\u00F6sung f\u00FCr den aktuellen Schritt senden
+messages=Nachrichten
 metaDataError=Es gab einen schwerwiegenden Fehler in der Metadaten-Datei. M\u00F6glicherweise gingen Daten verloren. Bitte benachrichtigen Sie Ihren Administrator damit er sich dieses Problem ansehen kann.
 metadata=Metadaten
 metadataCorrupt=Die Metadatendatei ist fehlerhaft, bitte informieren Sie ihren Administrator.
