--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -131,8 +131,8 @@ anzahlDerImagesAllerTreffer=Number of images for all hits
 anzahlMetadatenUndImagesErmitteln=Calculate number of metadata and images
 anzeige=View
 anzeigeAnpassen=Customise view
-applyToAllProcesses=apply to all processes of the batch
-applyToThisProcess=apply to this process
+applyToAllProcesses=Apply to all processes of the batch
+applyToThisProcess=Apply to this process
 arabisch=Arabic
 arbeitsschritt=Task
 arbeitsschritte=List of tasks
@@ -538,6 +538,7 @@ meldungUeberProblemloesungAnNachchfolgendeStationSenden=Send message about probl
 meldungUeberProblemloesungSenden=Send message about problem solution
 meldungUeberProblemloesungSendenForAll=send troubleshooting message to all steps
 meldungUeberProblemloesungSendenSingle=send troubleshooting message to the current step
+messages=Messages
 metaDataError=Critical error within the metadata file with a possible loss of data. Please inform the administrator.
 metadata=Metadata
 metadataCorrupt=The metadata file is faulty, please inform the administrator.
@@ -586,8 +587,8 @@ multiTiffDownloaden=Download multi-page tiff
 multipleBatchesAssigned=This process is assigned to multiple batches. To use this feature, it must be assigned to only one batch.
 nachEinemBandSuchen=Search for volume
 surname=Surname
-nachrichtHinzufuegen=add message
-nachrichtHinzufuegenForAll=add message to all processes
+nachrichtHinzufuegen=Add message
+nachrichtHinzufuegenForAll=Add message to all processes
 name=Name
 neu=Create new record set
 neueBenutzergruppeAnlegen=Create new user group
