fixed spelling, added javadoc

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -268,7 +268,7 @@ clear=Eingabe l\u00F6schen
 clearData=Daten l\u00F6schen
 client=Mandant
 clients=Mandanten
-clientEdit=Mandanten bearbeiten
+clientEdit=Mandant bearbeiten
 clientNew=Neuen Mandanten anlegen
 clientSaving=Mandant wird gespeichert...
 clientNon=Kein Mandant
