Fix saving of tasks

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -834,7 +834,7 @@ tasklist=Aufgabenliste
 taskManagerIsRunning=Aufgaben nicht automatisch starten
 taskManagerIsStopped=Aufgaben automatisch starten
 taskmanager=Taskmanager
-taskSaving=Schritt wird gespeichert...
+taskSaving=Aufgabe wird gespeichert...
 technischeDaten=Technische Daten
 technischerHintergrund=Technischer Hintergrund
 # technischerHintergrundTextDemo is used in kitodo_config.properties
