--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -736,6 +736,7 @@ reload=Aktualisieren
 removeFilter=Filter entfernen
 removeFromAssociatedBatch=Selektierte Vorg\u00E4nge von ihren zugewiesenen Batches entfernen
 removeFromBatch=Die Zuordnungs des Vorgangs zu Batch {0} wurde aufgehoben.
+removeUser=Benutzer entfernen
 renameBatch=Batch umbenennen
 requiredField=Mit * gekennzeichnete Felder sind Pflichtfelder
 rerender=Statistik neu berechnen
