--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -735,6 +735,7 @@ reload=reload
 removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
 removeFromBatch=Removed process from batch {0}.
+removeUser=Remove user
 renameBatch=Rename batch
 requiredField=Fields marked with * are required
 rerender=rerender statistic
