Fix adding and removing usergroups to and from tasks

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -736,6 +736,7 @@ removeFilter=Remove filter from list
 removeFromAssociatedBatch=remove selected processes from assigned batches
 removeFromBatch=Removed process from batch {0}.
 removeUser=Remove user
+removeUsergroup=Remove user group
 renameBatch=Rename batch
 requiredField=Fields marked with * are required
 rerender=rerender statistic
