Refactor new templates to always include message components

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -261,6 +261,7 @@ citation.versionDate=Stand\:
 clear=Eingabe l\u00F6schen
 clearData=Daten l\u00F6schen
 client=Mandant
+clientList=Mandantenliste
 clients=Mandanten
 clientEdit=Mandant bearbeiten
 clientNew=Neuen Mandanten anlegen
