--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -261,6 +261,7 @@ citation.versionDate=Version of\:
 clear=delete entry
 clearData=Clear data
 client=Client
+clientList=Client list
 clients=Clients
 clientEdit=Edit client
 clientNew=Create new client
