fixing Bug when calling metadataEditor page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -338,6 +338,7 @@ duration=Laufzeit
 durationInMonth=Laufzeit in Monaten
 editDocket=Laufzettel bearbeiten
 editMetadataGroup=Metadatengruppe bearbeiten
+editTemplate=Vorlage bearbeiten
 editor=Editor
 eigenschaft=Eigenschaft
 eigenschaftBearbeiten=Eigenschaft bearbeiten
