--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -338,6 +338,7 @@ duration=Duration
 durationInMonth=Duration in month
 editDocket=edit docket
 editMetadataGroup=Edit metadata group
+editTemplate=Edit template
 editor=Editor
 eigenschaft=Property
 eigenschaftBearbeiten=Edit property
