Ensure messages are displayed in the frontend in case of an errors in the form classes

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -361,7 +361,16 @@ err_subjectLine=Kitodo Anwendungsfehler
 error.IOException=Es trat ein Lese- oder Schreibfehler auf.
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
+errorAdding=Fehler beim Hinzuf\u00FCgen von '{0}'
+errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ '{0}'
+errorDeleting=Fehler beim L\u00F6schen von '{0}'
+errorExporting=Fehler beim Exportieren von '{0}' mit ID {1}
+errorLoadingMany=Fehler beim Laden von '{0}'
+errorLoadingOne=Fehler beim Laden von '{0}' mit ID {1}
 errorOccuredWhileCalculatingStatistics=Ein Fehler ist w\u00E4hrend der Berechnung der Statistik aufgetreten.
+errorReloading=Fehler beim Aktualisieren von '{0}'
+errorRenaming=Fehler beim Umbenennen von {0}
+errorSaving=Fehler beim Speichern von '{0}'
 errorTracking=Fehlertracking
 errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 erscheinungsjahr=Erscheinungsjahr
@@ -743,6 +752,8 @@ removeUsergroup=Benutzergruppe entfernen
 renameBatch=Batch umbenennen
 requiredField=Mit * gekennzeichnete Felder sind Pflichtfelder
 rerender=Statistik neu berechnen
+resultPDF=Ergebnis-PDF
+resultSet=Ergebnismenge
 rights=Rechte
 roemisch=r\u00F6misch
 rolle=Rolle
@@ -924,6 +935,7 @@ weiterZuArbeitsschritt=Senden an Arbeitsschritt
 weiterenVorgangAnlegen=Weiteren Vorgang anlegen
 werkstuecke=Werkst\u00FCcke
 wholeIndex=Gesamter Index
+wikiField=Wiki-Feld
 # wirklichAusfuehren is used many times in onclick
 wirklichAusfuehren=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 workflow=Workflow
