--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -361,7 +361,16 @@ err_subjectLine=Kitodo application error
 error.IOException=An I/O exception of some sort has occurred.
 error.SAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
 error.TransformerException=An exceptional condition occurred during the transformation process to XML.
+errorAdding=Error adding '{0}'
+errorCreating=Error creating new '{0}'
+errorDeleting=Error deleting '{0}'
+errorExporting=Error exporting '{0}' with ID {1}
+errorLoadingMany=Error loading '{0}'
+errorLoadingOne=Error loading '{0}' with ID {1}
 errorOccuredWhileCalculatingStatistics=An error occurred while calculating the statistics.
+errorReloading=Error reloading '{0}'
+errorRenaming=Error renaming {0}
+errorSaving=Error saving '{0}'
 errorTracking=Error tracking
 errorProjectNoTitleGiven=No project title was given. You cannot save a project without a title.
 erscheinungsjahr=Year of publication
@@ -742,6 +751,8 @@ removeUsergroup=Remove user group
 renameBatch=Rename batch
 requiredField=Fields marked with * are required
 rerender=rerender statistic
+resultPDF=Result PDF
+resultSet=Result set
 rights=Rights
 roemisch=Roman
 rolle=Role
@@ -923,6 +934,7 @@ weiterZuArbeitsschritt=Send to task
 weiterenVorgangAnlegen=Create next process
 werkstuecke=Workpieces
 wholeIndex=Whole index
+wikiField=Wiki field
 # wirklichAusfuehren is used many times in onclick
 wirklichAusfuehren=Are you sure you want to execute?
 workflow=Workflow
