Escape single quotes in message bundle

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -361,16 +361,16 @@ err_subjectLine=Kitodo Anwendungsfehler
 error.IOException=Es trat ein Lese- oder Schreibfehler auf.
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
-errorAdding=Fehler beim Hinzuf\u00FCgen von '{0}'
-errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ '{0}'
-errorDeleting=Fehler beim L\u00F6schen von '{0}'
-errorExporting=Fehler beim Exportieren von '{0}' mit ID {1}
-errorLoadingMany=Fehler beim Laden von '{0}'
-errorLoadingOne=Fehler beim Laden von '{0}' mit ID {1}
+errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
+errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
+errorDeleting=Fehler beim L\u00F6schen von ''{0}''
+errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
+errorLoadingMany=Fehler beim Laden von ''{0}''
+errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
 errorOccuredWhileCalculatingStatistics=Ein Fehler ist w\u00E4hrend der Berechnung der Statistik aufgetreten.
-errorReloading=Fehler beim Aktualisieren von '{0}'
+errorReloading=Fehler beim Aktualisieren von ''{0}''
 errorRenaming=Fehler beim Umbenennen von {0}
-errorSaving=Fehler beim Speichern von '{0}'
+errorSaving=Fehler beim Speichern von ''{0}''
 errorTracking=Fehlertracking
 errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 erscheinungsjahr=Erscheinungsjahr
