Support countable meta-data values
* Add metadata input to JSP page
* Implement meta-data counting
* Move the year properties input to the calendar page
* Move year start and name into course
* Save and read the year properties to and from the XML file
* Add outputting meta-data to XML
* Add reading meta-data from XML
* Output the meta-data values into the process during creation

Fixes #1325

--- a/Goobi/src/messages/messages_de.properties
+++ b/Goobi/src/messages/messages_de.properties
@@ -279,6 +279,7 @@ calendar.block.negative=Das Ende des Blocks liegt vor seinem Beginn.
 calendar.block.remove=Block l\u00F6schen
 calendar.block.remove.query=Wollen sie den Block l\u00F6schen?
 calendar.block.select=Block\:
+calendar.date.format=dd.MM.yyyy
 calendar.date.yearInterpreted=Die Jahreszahl {0} wurde als {1} interpretiert.
 calendar.header=Erscheinungsverlauf erfassen
 calendar.isEmpty=Erscheinungsverlauf enth\u00E4lt keine Ausgabe.
@@ -293,6 +294,20 @@ calendar.issue.sunday=So.
 calendar.issue.thursday=Do.
 calendar.issue.tuesday=Di.
 calendar.issue.wednesday=Mi.
+calendar.metadata.add=Metadatum hinzuf\u00FCgen
+calendar.metadata.caption=Metadaten
+calendar.metadata.continue=fortlaufend
+calendar.metadata.define=neu festlegen
+calendar.metadata.delete=l\u00F6schen
+calendar.metadata.mode.days=tagesweise
+calendar.metadata.mode.issues=ausgabenweise
+calendar.metadata.mode.months=monatsweise
+calendar.metadata.mode.off=statisch
+calendar.metadata.mode.quarters=quartalsweise
+calendar.metadata.mode.weeks=wochenweise
+calendar.metadata.mode.years=jahresweise
+calendar.metadata.removedEmptyEntry=Das leere Metadatenfeld wurde gel\u00F6scht.
+calendar.metadata.select=Ab Ausgabe\:
 calendar.sheet.column.april=Apr
 calendar.sheet.column.august=Aug
 calendar.sheet.column.december=Dez
@@ -314,6 +329,12 @@ calendar.upload.missingMandatoryElement=Ein erforderliches XML-Element konnte ni
 calendar.upload.missingMandatoryValue=Ein erforderlicher Wert konnte nicht gefunden werden.
 calendar.upload.overlappingDateRanges=Der Erscheinungsverlauf konnte nicht importiert werden, da sich Datumsbereiche von Bl\u00F6cken \u00FCberlappen\:
 calendar.upload.submit=Hochladen
+calendar.yearSettings.caption=Jahres-Einstellungen
+calendar.yearSettings.edit=Jahres-Einstellungen bearbeiten
+calendar.yearSettings.yearName=Bezeichnung f\u00FCr das Jahr\:
+calendar.yearSettings.yearStart=Erster Tag des Jahres\:
+calendar.yearSettings.yearStart.format=d.M.
+calendar.yearSettings.yearStart.IllegalArgumentException=Der erste Tag des Jahres ist ein ung\u00FCltiges Datum. Bitte geben Sie ein g\u00FCltiges Datum in der Form \u201CTag.Monat.\u201D ein.
 calculateStatistics=Statistik berechnen
 category=Kategorie
 chart=Diagramm
@@ -553,10 +574,6 @@ granularity.pick=Granularit\u00e4t w\u00E4hlen\:
 granularity.quarters=Quartale
 granularity.title=Vorgangs-Aggregierung
 granularity.weeks=Wochen
-granularity.yearName=Bezeichnung f\u00FCr das Jahr\:
-granularity.yearStart=Erster Tag des Jahres\:
-granularity.yearStart.format=d.M.
-granularity.yearStart.IllegalArgumentException=Der erste Tag des Jahres ist ein ung\u00FCltiges Datum. Bitte geben Sie ein g\u00FCltiges Datum in der Form \u201CTag.Monat.\u201D ein.
 granularity.years=Jahrg\u00E4nge
 gruppeOderBenutzer=Gruppe oder Benutzer
 guessImages=gesch\u00E4tzte Seitenanzahl
