--- a/Goobi/src/messages/messages_en.properties
+++ b/Goobi/src/messages/messages_en.properties
@@ -297,6 +297,19 @@ calendar.issue.sunday=Sun
 calendar.issue.thursday=Thu
 calendar.issue.tuesday=Tue
 calendar.issue.wednesday=Wed
+calendar.metadata.add=Add a piece of meta-data
+calendar.metadata.caption=Meta-data
+calendar.metadata.continue=continuous
+calendar.metadata.define=define new
+calendar.metadata.delete=delete
+calendar.metadata.mode.days=by day
+calendar.metadata.mode.issues=by issue
+calendar.metadata.mode.months=by month
+calendar.metadata.mode.off=static
+calendar.metadata.mode.quarters=by quarter
+calendar.metadata.mode.weeks=by week
+calendar.metadata.mode.years=by year
+calendar.metadata.select=Starting with issue\:
 calendar.sheet.column.april=Apr
 calendar.sheet.column.august=Aug
 calendar.sheet.column.december=Dec
@@ -318,6 +331,12 @@ calendar.upload.missingMandatoryElement=A mandatory XML element could not be fou
 calendar.upload.missingMandatoryValue=A mandatory value could not be found.
 calendar.upload.overlappingDateRanges=Due to overlapping date ranges of blocks, the course of appearance could not be imported\:
 calendar.upload.submit=Submit file
+calendar.yearSettings.caption=Year settings
+calendar.yearSettings.edit=Edit year settings
+calendar.yearSettings.yearName=Label for the year\:
+calendar.yearSettings.yearStart=First day of the year\:
+calendar.yearSettings.yearStart.format=M/d
+calendar.yearSettings.yearStart.IllegalArgumentException=The first day of the year is an invalid date. Please enter a valid date in form \u201Cmonth/day\u201D.
 catalogue_used=Catalogue used\:
 category=Category
 chart=Chart
@@ -556,10 +575,6 @@ granularity.pick=Pick a granularity\:
 granularity.quarters=Quarters
 granularity.title=Aggregation of processes
 granularity.weeks=Weeks
-granularity.yearName=Label for the year\:
-granularity.yearStart=First day of the year\:
-granularity.yearStart.format=M/d
-granularity.yearStart.IllegalArgumentException=The first day of the year is an invalid date. Please enter a valid date in form \u201Cmonth/day\u201D.
 granularity.years=Annuals
 gruppeOderBenutzer=User group or user
 guessImages=guess Pages
