Transform project archived state to project active state and unify displayed information in list and edit views

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -706,6 +706,7 @@ progress=Fortschritt
 project=Projekt
 projectAssociation=Projektzugeh\u00F6rigkeit
 projectConfiguration=Projektkonfiguration
+projectIsActive=Projekt ist aktiv
 projectIsArchived=Projekt ist inaktiv
 projectList=Projektliste
 projectProgress=Projektentwicklung
