--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -706,6 +706,7 @@ progress=Progress
 project=Project
 projectAssociation=Project association
 projectConfiguration=Project configuration
+projectIsActive=project active
 projectIsArchived=project inactive
 projectList=Projects list
 projectProgress=Project progress
