Add confirm dialog to task delete

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -300,6 +300,7 @@ defineStatisticalQuestion=Statistische Abfrage definieren
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
 deleteIndex=ElasticSearch Index l\u00F6schen
+deleteTask=Aufgabe l\u00F6schen
 denErzeugtenBandOeffnen=Den erzeugten Vorgang \u00F6ffnen
 dennochEinloggen=Dennoch einloggen
 details=Details
