--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -300,6 +300,7 @@ defineStatisticalQuestion=Define statistical question
 deleteAfterMove=Delete after export
 deleteBatch=delete the selected batch
 deleteIndex=Delete ElasticSearch index
+deleteTask=Delete task
 denErzeugtenBandOeffnen=Open created process
 dennochEinloggen=Log in anyway
 details=Details
