implemented full security at clients page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -267,6 +267,7 @@ clientEdit=Mandant bearbeiten
 clientNew=Neuen Mandanten anlegen
 clientSaving=Mandant wird gespeichert...
 clientNon=Kein Mandant
+clientView=Mandant anzeigen
 close=Schlie\u00DFen
 colorScheme=Farbschema
 configurationChanged=Einstellungen ge\u00E4ndert
