--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -267,6 +267,7 @@ clientEdit=Edit client
 clientNew=Create new client
 clientSaving=Saving client...
 clientNon=No client
+clientView=View client
 close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
