--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -272,6 +272,7 @@ close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
 configurationFile=Configuration file
+configurationSaving=Saving configuration...
 confirmNewPassword=Confirm new password
 contentLoeschen=Delete content
 copy=copy
