Improve extended search button label

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -390,6 +390,7 @@ exportMets=Export der Metadaten als METS-Datei in das Homeverzeichnis
 exportPdf=Export der Images zusammen mit den Metadaten als PDF-Datei in das Homeverzeichnis
 # exportRus is used in commented pages
 exportRus=Export Rus
+extendedSearch=Erweiterte Suche
 farbschema=Farbschema
 fehler=Fehler
 fehlerBeimEinlesen=Fehler beim Einlesen
